# stud

./: Cargo.toml  bacon.toml  flake.nix
crates/stud/: Cargo.toml
crates/stud-macros/: Cargo.toml
crates/stud-macros/src/: attr_main.rs  derive_args.rs  lib.rs  utils.rs
crates/stud/src/: bin.rs  error.rs  lib.rs  logger.rs  prelude.rs  rt.rs
scripts/: bump.sh  publish.sh
