[package]
name = "stud-macros"
description = "Macros for stud"
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
bin = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
