[package]
name = "stud"
description = "Batteries included standard library alternative"
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["bin"]
bin = ["stud-macros/bin", "dep:clap", "dep:tracing-subscriber", "dep:yansi", "dep:tokio"]

[dependencies]
stud-macros = { version = "0.1.1", path = "../stud-macros" }

# lib
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
rustc-hash = "1"

# bin
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
yansi = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
futures = "0.3"
clap = { version = "4", features = ["derive"], optional = true }
